--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body {
   left: 0;
   top: 0;
 }
+
 .splide__track {
   height: 100%;
   width: 100%;
@@ -171,7 +172,8 @@ section {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  max-width: 1400px;
+  height: 80vh;
   padding: 100px;
   gap: 70px;
 }
@@ -181,7 +183,7 @@ section {
   width: 80%;
   word-wrap: break-word;
   font-size: 38px;
-  color: black;
+  color: var(--yellow-color);
   line-height: 150%;
 
 }
@@ -273,25 +275,31 @@ section {
 }
 
 @keyframes bound {
-  0%{
-    transform: translate(0%,0%);
+  0% {
+    transform: translate(0%, 0%);
   }
+
   20% {
     transform: translate(2%, 3%);
   }
+
   40% {
     transform: translate(-3%, -2%);
   }
+
   60% {
     transform: translate(3%, -2%);
   }
+
   80% {
     transform: translate(-2%, 3%);
   }
+
   100% {
     transform: translate(-3%, 2%);
   }
 }
+
 .main-about-concept-right:hover {
   transform: scale(1.1);
 }
